tests/baselines/reference/arrowFunctionContexts.errors.txt
==== tests/cases/compiler/arrowFunctionContexts.ts (8 errors) ====
    
    // Arrow function used in with statement
    with (window) {
          ~~~~~~
!!! arrowFunctionContexts.ts(3,7): error TS2135: All symbols within a with block will be resolved to 'any'.
        var p = () => this;
    }
    
    // Arrow function as argument to super call
    class Base {
        constructor(n: any) { }
    }
    
    class Derived extends Base {
        constructor() {
            super(() => this);
        }
    }
    
    // Arrow function as function argument
    window.setTimeout(() => null, 100);
    ~~~~~~
!!! arrowFunctionContexts.ts(19,1): error TS2095: Could not find symbol 'window'.
    
    // Arrow function as value in array literal
    
    var obj = (n: number) => '';
    var obj: { (n: number): string; }; // OK
    
    var arr = [(n: number) => ''];
    var arr: { (n: number): string; }[]; // Incorrect error here (bug 829597)
    
    // Arrow function as enum value
    enum E {
        x = () => 4, // Error expected
        ~~~~~~~~~~~
!!! arrowFunctionContexts.ts(31,5): error TS2011: Cannot convert '() => number' to 'E'.
        y = (() => this).length // error, can't use this in enum
                   ~~~~
!!! arrowFunctionContexts.ts(32,16): error TS2097: 'this' cannot be referenced in current location.
    }
    
    // Arrow function as module variable initializer
    module M {
        export var a = (s) => '';
        var b = (s) => s;
    }
    
    // Repeat above for module members that are functions? (necessary to redo all of them?)
    module M2 {
        // Arrow function used in with statement
        with (window) {
              ~~~~~~
!!! arrowFunctionContexts.ts(44,11): error TS2135: All symbols within a with block will be resolved to 'any'.
            var p = () => this;
        }
    
        // Arrow function as argument to super call
        class Base {
            constructor(n: any) { }
        }
    
        class Derived extends Base {
            constructor() {
                super(() => this);
            }
        }
    
        // Arrow function as function argument
        window.setTimeout(() => null, 100);
        ~~~~~~
!!! arrowFunctionContexts.ts(60,5): error TS2095: Could not find symbol 'window'.
    
        // Arrow function as value in array literal
    
        var obj = (n: number) => '';
        var obj: { (n: number): string; }; // OK
    
        var arr = [(n: number) => ''];
        var arr: { (n: number): string; }[]; // Incorrect error here (bug 829597)
    
        // Arrow function as enum value
        enum E {
            x = () => 4, // Error expected
            ~~~~~~~~~~~
!!! arrowFunctionContexts.ts(72,9): error TS2011: Cannot convert '() => number' to 'E'.
            y = (() => this).length
                       ~~~~
!!! arrowFunctionContexts.ts(73,20): error TS2097: 'this' cannot be referenced in current location.
        }
    
        // Arrow function as module variable initializer
        module M {
            export var a = (s) => '';
            var b = (s) => s;
        }
    
    }
    
    // <Identifier>(ParamList) => { ... } is a generic arrow function
    var generic1 = <T>(n: T) => [n];
    var generic1: { <T>(n: T): T[] }; // Incorrect error, Bug 829597
    var generic2 = <T>(n: T) => { return [n]; };
    var generic2: { <T>(n: T): T[] };
    
    // <Identifier> ((ParamList) => { ... } ) is a type assertion to an arrow function
    var asserted1 = <any>((n) => [n]);
    var asserted1: any;
    var asserted2 = <any>((n) => { return n; });
    var asserted2: any;
    
    